cloudformation/cfn.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: path-manager
Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: composer-team
  Stage:
    Description: Environment name
    Type: String
    AllowedValues:
    - PROD
    - CODE
    - QA
    - TEST
    - RELEASE
  VpcId:
    Description: ID of the VPC onto which to launch the application eg. vpc-1234abcd
    Type: AWS::EC2::VPC::Id
    Default: vpc-381fa95d
  PrivateVpcSubnets:
    Description: Subnets to use in VPC for private EC2 instances eg. subnet-abcd1234
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-c2620fa7,subnet-2a37bd5d,subnet-2967c870
  AMI:
    Description: AMIgo AMI ID
    Type: AWS::EC2::Image::Id
  DigDevBubble:
    Description: Ip range for the digdev bubble
    Type: String
    Default: 10.249.16.0/22
  GithubTeamName:
    Description: Github team name, used for giving ssh access to members of the team.
    Type: String
    Default: Editorial-Tools-SSHAccess
Resources:
  PathManagerRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
  PathManagerDynamoPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: PathManagerDynamoEC2Policy
      PolicyDocument:
        Statement:
        - Action:
          - dynamodb:*
          Effect: Allow
          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${Stage}-pathManager-sequence'
        - Action:
          - dynamodb:*
          Effect: Allow
          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${Stage}-pathManager-paths'
        - Action:
          - dynamodb:*
          Effect: Allow
          Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${Stage}-pathManager-paths/index/id-index'
      Roles:
      - !Ref 'PathManagerRole'
  PathManagerDescribePolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: PathManagerDescribePolicy
      PolicyDocument:
        Statement:
        - Action:
          - EC2:Describe*
          Effect: Allow
          Resource: '*'
      Roles:
      - !Ref 'PathManagerRole'
  PathManagerGetDistributablesPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: PathManagerGetDistributablesPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - s3:GetObject
          Resource:
          - arn:aws:s3:::composer-dist/*
      Roles:
      - !Ref 'PathManagerRole'
  PathManagerGetConfigPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: PathManagerGetConfigPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - s3:GetObject
          Resource:
          - arn:aws:s3:::guconf-flexible/path-manager/*
      Roles:
      - !Ref 'PathManagerRole'
  PathManagerCloudwatchPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: PathManagerCloudwatchPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - cloudwatch:*
          Resource: '*'
      Roles:
      - !Ref 'PathManagerRole'
  LoggingKinesisStreamPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: LoggingKinesisStreamPolicy
      PolicyDocument:
        Statement:
        - Resource:
          - arn:aws:kinesis:*:*:stream/elk-*-KinesisStream-*
          Action:
          - kinesis:PutRecord
          - kinesis:PutRecords
          - kinesis:DescribeStream
          Effect: Allow
      Roles:
      - !Ref 'PathManagerRole'
  PathManagerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref 'PathManagerRole'
  GetTeamKeysPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: GetTeamKeysPolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action:
          - s3:GetObject
          Resource:
          - arn:aws:s3:::github-public-keys/*
        - Effect: Allow
          Action:
          - s3:ListBucket
          Resource: arn:aws:s3:::github-public-keys
      Roles:
      - !Ref 'PathManagerRole'
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from the office
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
  AppServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: path manager application servers
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 9000
        ToPort: 9000
        CidrIp: !Ref 'DigDevBubble'
      - IpProtocol: tcp
        FromPort: 9000
        ToPort: 9000
        SourceSecurityGroupId: !Ref 'InternalLoadBalancerSecurityGroup'
  InternalLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: internal path manager application load balancer
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 10.248.200.0/21
  InternalPathManagerLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      SecurityGroups:
      - !GetAtt 'InternalLoadBalancerSecurityGroup.GroupId'
      Scheme: internal
      CrossZone: true
      Subnets: !Ref 'PrivateVpcSubnets'
      Listeners:
      - LoadBalancerPort: '80'
        InstancePort: '9000'
        Protocol: HTTP
      HealthCheck:
        Target: HTTP:9000/management/healthcheck
        HealthyThreshold: '2'
        UnhealthyThreshold: '2'
        Interval: '10'
        Timeout: '5'
      Tags:
      - Key: Stage
        Value: !Ref 'Stage'
      - Key: Stack
        Value: flexible
      - Key: App
        Value: path-manager
      - Key: Loadbalancer
        Value: internal
  AutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs ''
      VPCZoneIdentifier: !Ref 'PrivateVpcSubnets'
      LaunchConfigurationName: !Ref 'PathManagerLaunchConfig'
      MinSize: 3
      MaxSize: 6
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      LoadBalancerNames:
      - !Ref 'InternalPathManagerLoadBalancer'
      Tags:
      - Key: Stage
        Value: !Ref 'Stage'
        PropagateAtLaunch: 'true'
      - Key: Stack
        Value: flexible
        PropagateAtLaunch: 'true'
      - Key: App
        Value: path-manager
        PropagateAtLaunch: 'true'
  PathManagerLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: !Ref 'KeyName'
      ImageId: !Ref 'AMI'
      SecurityGroups:
      - !Ref 'AppServerSecurityGroup'
      - !Ref 'SSHSecurityGroup'
      InstanceType: t2.micro
      IamInstanceProfile: !Ref 'PathManagerInstanceProfile'
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash -ev
          mkdir /etc/gu
          aws s3 cp s3://guconf-flexible/path-manager/${Stage}.conf /etc/gu/path-manager.private.conf
          aws s3 cp s3://composer-dist/flexible/${Stage}/path-manager/path-manager_0.1-SNAPSHOT_all.deb /tmp/path-manager.deb
          dpkg -i /tmp/path-manager.deb
